add business analytics, offer image support, and social auth flow
