# application/inbound-controller-rest/src/main/java/sk/posam/fsa/foodrescue/controller/BusinessController.java
@@ -4,9 +4,13 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import sk.posam.fsa.foodrescue.domain.models.entities.Business;
 import sk.posam.fsa.foodrescue.domain.models.entities.User;
+import sk.posam.fsa.foodrescue.domain.models.valueobjects.BusinessAnalyticsSnapshot;
+import sk.posam.fsa.foodrescue.domain.services.BusinessAnalyticsFacade;
 import sk.posam.fsa.foodrescue.domain.services.BusinessFacade;
+import sk.posam.fsa.foodrescue.mapper.BusinessAnalyticsMapper;
 import sk.posam.fsa.foodrescue.mapper.BusinessMapper;
 import sk.posam.fsa.foodrescue.rest.api.BusinessesApi;
+import sk.posam.fsa.foodrescue.rest.dto.BusinessAnalyticsResponseDto;
 import sk.posam.fsa.foodrescue.rest.dto.BusinessResponseDto;
 import sk.posam.fsa.foodrescue.rest.dto.CreateBusinessRequestDto;
 import sk.posam.fsa.foodrescue.rest.dto.UpdateBusinessRequestDto;
@@ -19,14 +23,20 @@ import java.util.List;
 public class BusinessController implements BusinessesApi {
 
     private final BusinessFacade businessFacade;
+    private final BusinessAnalyticsFacade businessAnalyticsFacade;
     private final BusinessMapper businessMapper;
+    private final BusinessAnalyticsMapper businessAnalyticsMapper;
     private final CurrentUserDetailService currentUserDetailService;
 
     public BusinessController(BusinessFacade businessFacade,
+                              BusinessAnalyticsFacade businessAnalyticsFacade,
                               BusinessMapper businessMapper,
+                              BusinessAnalyticsMapper businessAnalyticsMapper,
                               CurrentUserDetailService currentUserDetailService) {
         this.businessFacade = businessFacade;
+        this.businessAnalyticsFacade = businessAnalyticsFacade;
         this.businessMapper = businessMapper;
+        this.businessAnalyticsMapper = businessAnalyticsMapper;
         this.currentUserDetailService = currentUserDetailService;
     }
 
@@ -52,6 +62,12 @@ public class BusinessController implements BusinessesApi {
         User user = currentUserDetailService.getFullCurrentUser();
         Business business = businessFacade.get(user, id);
         return ResponseEntity.ok(businessMapper.toDto(business));
+    }
+
+    public ResponseEntity<BusinessAnalyticsResponseDto> getBusinessAnalytics(Long id) {
+        User user = currentUserDetailService.getFullCurrentUser();
+        BusinessAnalyticsSnapshot snapshot = businessAnalyticsFacade.getAnalytics(user, id);
+        return ResponseEntity.ok(businessAnalyticsMapper.toDto(snapshot));
     }
 
     @Override
